# AerialDetection

./: .pre-commit-config.yaml  README.md  commands.py  dvc.yaml  pyproject.toml
configs/: main.yaml
configs/data/: data.yaml  default.yaml
configs/inference/: default.yaml
configs/model/: default.yaml  yolo12.yaml
configs/training/: default.yaml
configs/validation/: default.yaml
plots/2025-06-07/example/train/version_0/: final_config.yaml  hparams.yaml  metrics.csv
src/: __init__.py  data.py  hydra_training.py  inference.py  model.py  unzip_data.py  val.py
