[project]
name = "aerialdetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc[gdrive]>=3.60.0",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.1.post0",
    "onnx==1.17.0",
    "onnxruntime-gpu>=1.22.0",
    "onnxslim>=0.1.56",
    "pre-commit>=4.2.0",
    "psutil==5.9.0",
    "tensorrt>=10.11.0.33",
    "torch>=2.7.1",
    "torchmetrics>=1.7.2",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.151",
]
